--- a/SwappingGame/SwappingGame.vcxproj.filters
+++ b/SwappingGame/SwappingGame.vcxproj.filters
@@ -6,6 +6,7 @@
     <ClCompile Include="src\std_image_loader.cpp" />
     <ClCompile Include="src\shader_s.cpp" />
     <ClCompile Include="src\tile.cpp" />
+    <ClCompile Include="src\board.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="materials\avatar.jpg" />
@@ -14,9 +15,12 @@
   <ItemGroup>
     <ClInclude Include="src\shader_s.h" />
     <ClInclude Include="src\tile.h" />
+    <ClInclude Include="src\board.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\Shaders\vertexShader.vs" />
     <None Include="src\Shaders\fragmentShader.fs" />
+    <None Include="src\Shaders\fragmentShader.frag" />
+    <None Include="src\Shaders\vertexShader.vert" />
   </ItemGroup>
 </Project>
